packages/vanilla-components/src/components/referral-component/referral-component.scss
sqh-referral-component {
  // position:relative;

  &:nth-child(3) .squatch-referrals-row {
    border-bottom: none;
  }
  .squatch-referrals-row {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-align: center;
    align-items: center;
    height: 80px;
    border-bottom: 1px solid #ececec;
    max-width: 500px;
    margin: 0 auto;
    padding: 0 20px;
    line-height: 1.6;
    &>div:first-of-type {
      -ms-flex: 1;
      flex: 1;
    }
    .icon {
      float: left;
      font-size: 32px;
    }
    .sqh-column-two {
      padding: 10px 0;
    }
  }
  .squatch-referrals-value {
    width: 175px;
    font-size: 16px;
    float: left;
    line-height: 49px;
  }
  .squatch-value-contents {
    font-size: 13px;
    line-height: 0px;
    padding-bottom: 25px;
  }
  .squatch-referrals-heading {
    font-size: 16px;
  }
  .squatch-referrals-description {
    font-size: 13px;
  }
}

sqh-referral-component {
  @media (max-width: 499px) {
    .squatch-referrals-description {
      display: none;
    }
    .squatch-referrals-row {
      padding: 0;
    }
    .squatch-referrals-row {
      &>div:first-of-type {
        width: 100px;
        overflow: hidden;
      }
    }
  }
}

